--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,50 @@
 body{
-  background-color: black;
+  background-color: rgb(49, 117, 49);
   color: white;
-  font-family: sans-serif;
-
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  position: relative;
+  left: 0px;
+ 
 }
 #gameField {
   position: relative;
   height: 400px;
   width: 600px;
-  border: 1px solid white;
+  border: 100px solid rgb(0, 0, 0);
 }
 
 #paddle1, #paddle2 {
-  position: absolute;
+  position: absolute; 
   width: 15px;
-  height: 80px;
-  background-color: white;
+  height: 90px;
+  background-color: rgb(20, 135, 230);
+
 }
 
 #paddle1 {
-  left: 30px;
+  left: 10px;
 }
 
 #paddle2 {
-  right: 30px;
+  right:10px;
 }
 
 #ball {
   position: absolute;
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
   background-color: white;
-  left: 50%;
-  top: 50%;
+  left: 60%;
+  top: 60%;
+  border-radius: 100%;
+
 }
 
 #score1, #score2 {
   position: absolute;
-  top: 10px;
+  top: 450px;
   font-size: 30px;
 }
 
@@ -51,9 +58,10 @@ body{
 
 #middleLine {
   position: absolute;
-  width: 2px;
+  width: 25px;
   height: 100%;
   left: 50%;
-  background: linear-gradient(white 50%, transparent 50%);
+  background: linear-gradient(rgb(255, 238, 0) 50%, transparent 50%);
   background-size: 100% 53.5px;
 }
+
