--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
   position: absolute;
   width: 15px;
   height: 80px;
-  background-color: #fff; /* Cambiado a blanco */
+  background-color: #620fe7; /* Cambiado a blanco */
 }
 
 /* Alineación de las paletas */
